--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^4.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "react-router-dom": "^6.14.1"
   }
 }
